scrollbar bug fix

--- a/skydrop_client/src/index.css
+++ b/skydrop_client/src/index.css
@@ -7,6 +7,7 @@ body {
 
   min-width: 400px;
   min-height: 400px;
+  overflow: hidden;
   margin: 0;
   padding: 0;
 }
